--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "types" : ["jest", "node", "@testing-library/jest-dom"],
-
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
